# SynAPS

./: .gitignore  ALNS_INITIAL_SEED_FIX_PLAN_2026_05_01.md  AUDIT_VERIFICATION_2026_05_01.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HYPERDEEP_ACADEMIC_AUDIT_2026_05_01.md  HYPERDEEP_AUDIT_PLAN_2026_04_27.md  LICENSE  MAINTAINERS.md  NEXT_WAVE_EXECUTION_PLAN_2026_05_01.md  README.md  README_RU.md  RELEASE_POLICY.md  SECURITY.md  SUPPORT.md  habr-article-v3.md  pyproject.toml
.cargo/: config.toml
.github/: BRANCH_PROTECTION_CHECKLIST.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  dependency-review-config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  domain_request.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  codeql.yml  dependency-review.yml  release.yml  scorecards.yml
benchmark/: README.md  README_RU.md  STUDIES_INDEX.md  __init__.py  generate_instances.py  run_benchmark.py  study_native_acceleration.py  study_native_rhc_candidate_acceleration.py  study_rhc_500k.py  study_rhc_50k.py  study_rhc_alns_doe.py  study_rhc_alns_geometry_doe.py  study_routing_boundary.py  study_solver_scaling.py
benchmark/instances/: README.md  medium_20x10.json  medium_4state_tsp_dominance_16x4.json  medium_stress_20x4.json  pareto_setup_tradeoff_4op.json  tiny_3x3.json
control-plane/: README.md  README_RU.md  package-lock.json  package.json  tsconfig.json
control-plane/src/: anti-corruption.ts  app.ts  gantt-view.ts  observability.ts  openapi.ts  otel.ts  paths.ts  python-executor.ts  runtime-contract.ts  server.ts  solve-jobs.ts
control-plane/test/: app.test.ts  integration.test.ts  python-executor.test.ts
docs/: HYPERDEEP_NATIVE_ACCELERATION_AUDIT_2026_04_20.md  PUBLIC_GITHUB_POST_PUSH_CHECKLIST.md  README.md  README_RU.md
docs/architecture/: 01_OVERVIEW.md  02_CANONICAL_FORM.md  03_SOLVER_PORTFOLIO.md  04_DATA_MODEL.md  05_DEPLOYMENT.md  06_BENCHMARK_REPRODUCIBILITY_AND_ROBUSTNESS.md  06_LANGUAGE_AND_RUNTIME_STRATEGY.md  07_RUNTIME_CONTRACT.md  08_HPC_SILICON_OPTIMIZATION_ROADMAP.md  ATOMIC_ARCHITECTURE_THESIS_2026.md  LEVEL2_RUSTIFICATION.md
docs/audit/: ACADEMIC_TECHNICAL_REPORT_2026_04.md  DISSERTATION_AUDIT_REPORT.md  SYNAPS_ACADEMIC_AUDIT_COMPREHENSIVE_RU.md  SYNAPS_AUDIT_APRIL_2026_POST_IMPLEMENTATION.md  SYNAPS_AUDIT_DELTA_EXECUTION_PLAN_2026_04_25.md  SYNAPS_CRITICAL_GAPS_AND_OPTIMIZATIONS_RU.md  SYNAPS_RECHECK_AUDIT_2026_04_27.md  SYNAPS_UPDATED_STRATEGIC_RECOMMENDATIONS_2026_04.md  SYNAPS_UPDATE_AUDIT_2026_04_25.md  SYNAPS_VS_INFIMUM_MOSKABEL_STRATEGY_RU.md
docs/domains/: DOMAIN_CATALOG.md  aerospace.md  data_center.md  electronics.md  energy.md  food_beverage.md  logistics.md  metallurgy.md  pharmaceutical.md
docs/evolution/: CROSS_VECTOR_INTEGRATION.md  V1_DIGITAL_TWIN_DES.md  V2_LLM_COPILOT.md  V3_FEDERATED_LEARNING.md  V4_QUANTUM_READINESS.md
docs/habr/: synaps-open-source-habr-v3-pack.md  synaps-open-source-habr-v3.md
docs/investor/: ACADEMIC_METHODS_APPENDIX_2026_04.md  BENCHMARK_EVIDENCE_PACKET_2026_04.md  (+45 more)
native/synaps_native/: Cargo.toml
native/synaps_native/.cargo/: config.toml
native/synaps_native/src/: lib.rs
research/: 50k_scale_academic_audit.md  SYNAPS_ACADEMIC_WHITEPAPER.md  SYNAPS_AIR_GAPPED_OFFLINE.md  SYNAPS_MASTER_BLUEPRINT.md  SYNAPS_OSS_STACK_2026.md  SYNAPS_UNIVERSAL_ARCHITECTURE.md  SYN_APS_ACADEMIC_WHITEPAPER.md  SYN_APS_AIR_GAPPED_OFFLINE.md  SYN_APS_MASTER_BLUEPRINT.md  SYN_APS_OSS_STACK_2026.md  SYN_APS_UNIVERSAL_ARCHITECTURE.md
schema/: README.md
syn_aps/: __init__.py  model.py
synaps/: __init__.py  __main__.py  accelerators.py  cli.py  contracts.py  guards.py  instrumentation.py  logging.py  ml_advisory.py  model.py  portfolio.py  problem_profile.py  replay.py  validation.py
technical/: DEEP_TECHNICAL_AUDIT_2026_04.md
tests/: conftest.py  test_accelerators.py  test_alns_rhc_scaling.py  test_audit_fixes.py  test_benchmark_boundary_study.py  test_benchmark_generator.py  test_benchmark_harness.py  test_benchmark_regression.py  test_benchmark_rhc_500k_study.py  test_benchmark_rhc_50k_study.py  test_benchmark_rhc_alns_doe.py  test_benchmark_runner.py  test_benchmark_solver_scaling_study.py  test_cli.py  test_contracts.py  test_cpsat_phase2_features.py  test_cpsat_solver.py  test_cross_solver.py  test_dispatch_support_regression.py  test_error_taxonomy_and_logging.py  test_feasibility.py  test_greedy_dispatch.py  test_incremental_repair.py  test_lbbd_hd_solver.py  test_lbbd_phase2_features.py  test_lbbd_solver.py  test_lower_bounds.py  test_ml_advisory.py  test_model.py  test_native_acceleration_study.py  test_native_rhc_candidate_acceleration_study.py  test_phase1_features.py  test_portfolio_api.py  test_problem_profile.py  test_property_based.py  test_replay.py  test_rhc_admission_module.py  test_rhc_budget_module.py  test_rhc_metadata_module.py  test_rhc_window_module.py  (+2 more)
(+133 files in other folders)
