[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "syn-aps"
version = "0.1.0"
description = "Universal Advanced Planning & Scheduling solver for MO-FJSP-SDST-ML-ARC"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Syn-APS Contributors" }]
keywords = [
    "scheduling",
    "optimization",
    "constraint-programming",
    "job-shop",
    "FJSP",
    "SDST",
    "APS",
    "operations-research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Scheduling",
]

dependencies = [
    "ortools>=9.10",
    "highspy>=1.8",
    "pydantic>=2.9",
    "numpy>=2.1",
]

[project.optional-dependencies]
ml = [
    "torch>=2.6",
    "torch-geometric>=2.6",
]
llm = [
    "sglang>=0.4",
]
rl = [
    "torchrl>=0.6",
]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
]
all = ["syn-aps[ml,llm,rl,dev]"]

[project.urls]
Repository = "https://github.com/syn-aps/syn-aps"
Documentation = "https://github.com/syn-aps/syn-aps/tree/main/docs"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
]
