[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "synaps"
version = "0.1.0"
description = "Deterministic-first scheduling and resource-orchestration engine for MO-FJSP-SDST-ARC planning problems"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
authors = [{ name = "SynAPS Contributors" }]
maintainers = [{ name = "SynAPS Contributors" }]
keywords = [
    "scheduling",
    "optimization",
    "constraint-programming",
    "job-shop",
    "FJSP",
    "SDST",
    "APS",
    "operations-research",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Scheduling",
]

dependencies = [
    "ortools>=9.10",
    "highspy>=1.8",
    "pydantic>=2.9",
    "numpy>=2.1",
]

[project.optional-dependencies]
ml = [
    "torch>=2.6",
    "torch-geometric>=2.6",
]
llm = [
    "sglang>=0.5.10.post1",
]
rl = [
    "torchrl>=0.6",
]
dev = [
    "build>=1.2",
    "hypothesis>=6.100",
    "pytest>=8.3",
    "pytest-benchmark>=5.0",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "twine>=6.1",
]
all = ["synaps[ml,llm,rl,dev]"]

[project.urls]
Homepage = "https://github.com/KonkovDV/SynAPS"
Repository = "https://github.com/KonkovDV/SynAPS"
Documentation = "https://github.com/KonkovDV/SynAPS/tree/master/docs"
Issues = "https://github.com/KonkovDV/SynAPS/issues"
Changelog = "https://github.com/KonkovDV/SynAPS/releases"
Support = "https://github.com/KonkovDV/SynAPS/blob/master/SUPPORT.md"
Security = "https://github.com/KonkovDV/SynAPS/security/policy"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests requiring external services",
    "hypothesis: property-based tests using Hypothesis",
]
