[package]
name = "synaps_native"
version = "0.2.0"
edition = "2021"

[lib]
name = "synaps_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24", features = ["extension-module"] }
numpy = "0.24"
rayon = "1.10"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
panic = "abort"
strip = true
